board hashtag 테이블 매핑 및 타입스크립트 변환
