# photo-blog-express/src/swagger/swagger.yaml
@@ -38,29 +38,6 @@ paths:
                       message:
                         type: string;
                         example: 테스트 계정을 생성 완료 했습니다.
-  /user/admin:
-    get:
-      tags:
-        - /user
-      summary: 관리자 계정 생성
-      responses:
-        '201':
-          description: 관리자 계정 생성 완료
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  statusCode:
-                    type: integer
-                    description: 응답 상태 코드
-                    example: 201
-                  data:
-                    type: object
-                    properties:
-                      userId:
-                        type: string;
-                        example: userId
   /user:
     post:
       tags:
@@ -73,13 +50,14 @@ paths:
       parameters:
         - in: query
           name: userId
+          required: true
           schema:
             type: string
           description: 사용 할 유저 아이디 입력
       summary: 아이디 중복 체크
       responses:
         '200':
-          description: 관리자 계정 생성 완료
+          description: 사용 가능한 아이디
           content:
             application/json:
               schema:
@@ -100,11 +78,82 @@ paths:
       tags:
         - /user
       summery: 로그인
-  /user/manage:
+  /admin:
     get:
       tags:
-        - /user
-      summery: 유저 리스트
+        - /admin
+      summary: 관리자 계정 생성
+      responses:
+        '201':
+          description: 관리자 계정 생성 완료
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    description: 응답 상태 코드
+                    example: 201
+                  data:
+                    type: object
+                    properties:
+                      userId:
+                        type: string;
+                        example: userId
+  /admin/user:
+    get:
+      tags:
+        - /admin
+      summary: 관리자 계정 생성
+      responses:
+        '201':
+          description: 관리자 계정 생성 완료
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    description: 응답 상태 코드
+                    example: 201
+                  data:
+                    type: object
+                    properties:
+                      userId:
+                        type: string;
+                        example: userId
+  '/admin/user/{uuid}':
+    delete:
+      parameters:
+        - in: path
+          name: uuid
+          required: true
+          description: 유저의 ID
+          schema:
+            type: string
+      tags:
+        - /admin
+      summary: 관리자 계정 생성
+      responses:
+        '201':
+          description: 관리자 계정 생성 완료
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    description: 응답 상태 코드
+                    example: 201
+                  data:
+                    type: object
+                    properties:
+                      userId:
+                        type: string;
+                        example: userId
 components:
   responses:
     successResponse:
